# OpenCanvas

./: .env.example  .gitignore  API_README.md  CLAUDE.md  CLEAN_EVOLUTION_SUMMARY.md  CONTRIBUTING.md  EVOLUTION_DOCS.md  EVOLUTION_SYSTEM_HANDOVER.md  EVOLUTION_SYSTEM_README.md  LICENSE  MULTI_AGENT_EVOLUTION_ROADMAP.md  PDF_PROMPTS_REGISTRY.md  PROMPTS_REGISTRY.md  README.md  RELEASE.md  TOOLS.md  TOOLS_REGISTRY.md  TOOLS_SPECIFICATION.md  TOOL_IMPLEMENTATION_DESIGN.md  analyze_evolution_logging.py  cleanup_reflection_agent.py  continue_from_checkpoint.py  demo_complete_evolution_cycle.py  demo_tools_registry_integration.py  env.example.sh  evaluation.py  example_pdf_caption_extraction.py  fix_fstrings.py  license.txt  logging_verification.py  pdf_evolution.py  pyproject.toml  requirements-all.txt  requirements-api.txt  requirements.txt  run_adversarial_eval_test.py  run_single_slide_eval.py  run_tests.py  run_visual_comparison_eval.py  server.py  (+7 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: README.md  installation.md
evaluation/: __init__.py  evaluate.py  evaluator.py
examples/: VISUAL_ADVERSARIAL_README.md  adversarial_attack_demo.py  basic_usage.py  run_visual_adversarial_test.py  visual_adversarial_generator.py  visual_adversarial_prompts.py  visual_adversarial_tester.py
generation/: __init__.py  slide_generator.py
prompt/: generation.py
src/: config.py  main.py
tests/: README.md  __init__.py  run_adversarial_eval_test.py  run_e2e_tests.py  test_conversion.py  test_pdfs.py  test_topics.py
(+155 files in other folders)
