[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opencanvas"
version = "0.1.0"
description = "OpenCanvas: AI-powered tool for generating and evaluating HTML presentations and posters."
authors = [
    { name = "Christine", email = "christine1729.fs@gmail.com" },
    { name = "Zhenyi", email = "zyqi2011@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.14.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "playwright>=1.25.0",
    "asyncio>=3.4.3",
    "openai==1.88.0"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["generation*", "evaluation*"]
